--- a/gl/index.html
+++ b/gl/index.html
@@ -16,33 +16,79 @@
     }
 </style>
 <script>
-    var width = 400,
-        height = 400;
+    var width = 900;
+    var height = 900;
 
     var init = function () {
         var scene = new THREE.Scene();
         var camera = new THREE.PerspectiveCamera(75, width / height, 0.1, 1000);
         var renderer = new THREE.WebGLRenderer();
-        renderer.setSize(width, height);
-        document.body.appendChild(renderer.domElement);
 
-        var geometry = new THREE.BoxGeometry(1, 1, 1);
-        var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
-        var cube = new THREE.Mesh(geometry, material);
+        renderer.setClearColor(0xEEEEEE);
+        renderer.setSize(width, height);
+
+
+//        var axes = new THREE.AxisHelper(300);
+//        scene.add(axes);
+
+        var planeGeometry = new THREE.PlaneGeometry(60, 20, 1, 1);
+        var planeMaterial = new THREE.MeshLambertMaterial({color: 0xcccccc});
+        var plane = new THREE.Mesh(planeGeometry, planeMaterial);
+        plane.rotation.x = -0.5 * Math.PI;
+        plane.position.x = 15;
+        plane.position.y = 0;
+        plane.position.z = 0;
+        scene.add(plane);
+
+        var cubeGeometry = new THREE.CubeGeometry(4, 4, 4);
+        var cubeMaterial = new THREE.MeshLambertMaterial({color: 0xff0000});
+        var cube = new THREE.Mesh(cubeGeometry, cubeMaterial);
+        cube.position.x = -4;
+        cube.position.y = 2;
+        cube.position.z = 0;
         scene.add(cube);
 
-        camera.position.z = 5;
+        var sphereGeometry = new THREE.SphereGeometry(4, 20, 20);
+        var sphereMaterial = new THREE.MeshLambertMaterial({color: 0x7777ff});
+        var sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
+        sphere.position.x = 20;
+        sphere.position.y = 4;
+        sphere.position.z = 2;
+        scene.add(sphere);
 
+        var spotLight = new THREE.SpotLight(0xffffff);
+        spotLight.position.set(-40, 60, -10);
+        scene.add(spotLight);
+
+
+        camera.position.x = -30;
+        camera.position.y = 40;
+        camera.position.z = 30;
+        camera.lookAt(scene.position);
+
+
+        document.body.appendChild(renderer.domElement);
+
+
+        var direction = 1;
         var render = function () {
             requestAnimationFrame(render);
 
-            cube.rotation.x += 0.1;
+//            cube.rotation.x += 0.1;
             cube.rotation.y += 0.1;
+
+            if (sphere.position.y <= 4) {
+                direction = 1
+            } else if (sphere.position.y > 10) {
+                direction = -1
+            }
+
+            sphere.position.y += (0.1 * direction);
 
             renderer.render(scene, camera);
         };
 
-//        render();
+        render();
     }
 </script>
 <body onload="init()">
